# equilibria

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  council_error.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start_app.py  verify_api.py
.streamlit/: secrets.toml.example
backend/: main.py  models.py  store.py
backend/api/: burnout.py  chat.py  council.py  decision.py  negotiator.py  planning.py  simulation.py  state.py
data/: store.json
docs/: AGENTIC_BEHAVIORS.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Dashboard.tsx  LandingPage.backup.tsx  LandingPage.tsx  api.ts  main.tsx
frontend/src/views/: ChatView.tsx  CouncilView.tsx  LoginCharacters.css  LoginCharacters.tsx  LoginView.tsx  MakeDecisionView.tsx  OnboardingView.tsx  SimulationView.tsx
src/: __init__.py  main.py
src/agents/: __init__.py  burnout_predictor.py  chat_agent.py  constraint_evaluator.py  goal_negotiator.py  health_council.py  plan_adjuster.py  state_analyzer.py  temporal_reasoner.py  tradeoff_engine.py
src/core/: __init__.py  config.py  llm_reasoning.py  reasoning_logger.py
src/data/: __init__.py  csv_loader.py  synthetic_generator.py
src/models/: __init__.py  bio_adaptive_engine.py  decision.py  future_agent.py  health_state.py  predictive_engine.py  user_profile.py
src/simulation/: __init__.py  week_simulator.py
src/utils/: audio_transcriber.py  browser_storage.py
tests/: test_predictive_engine.py  test_tradeoff_engine.py
ui/: .user_cache.json  streamlit_app.py
