[project]
name = "equilibra"
version = "1.0.0"
description = "Professional Multi-Agent System for Burnout Prevention and Wellness Optimization"
authors = [
    {name = "Arnav Ranjan", email = "ranjan.arnav@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["health", "ai", "multi-agent", "burnout-prevention", "wellness"]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "faker>=22.0.0",
    "groq>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/ranjan-arnav/equilibria"
Repository = "https://github.com/ranjan-arnav/equilibria"
Issues = "https://github.com/ranjan-arnav/equilibria/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
